build/usd-sys/src/pxr/base/gf/gf_matrix.rs

#![allow(non_snake_case)]
#![allow(non_camel_case_types)]
#![allow(non_upper_case_globals)]
#![allow(unused_imports)]
use crate::*;
pub use crate::cppmmabi::*;
use std::os::raw::*;


impl pxrInternal_v0_21__pxrReserved____GfMatrix2f_t {
    pub fn layout() -> std::alloc::Layout {
        unsafe {
            std::alloc::Layout::from_size_align(
                pxrInternal_v0_21__pxrReserved____GfMatrix2f_sizeof(),
                pxrInternal_v0_21__pxrReserved____GfMatrix2f_alignof(),
            ).unwrap()
        }
    }
}


impl pxrInternal_v0_21__pxrReserved____GfMatrix2d_t {
    pub fn layout() -> std::alloc::Layout {
        unsafe {
            std::alloc::Layout::from_size_align(
                pxrInternal_v0_21__pxrReserved____GfMatrix2d_sizeof(),
                pxrInternal_v0_21__pxrReserved____GfMatrix2d_alignof(),
            ).unwrap()
        }
    }
}


impl pxrInternal_v0_21__pxrReserved____GfMatrix3f_t {
    pub fn layout() -> std::alloc::Layout {
        unsafe {
            std::alloc::Layout::from_size_align(
                pxrInternal_v0_21__pxrReserved____GfMatrix3f_sizeof(),
                pxrInternal_v0_21__pxrReserved____GfMatrix3f_alignof(),
            ).unwrap()
        }
    }
}


impl pxrInternal_v0_21__pxrReserved____GfMatrix3d_t {
    pub fn layout() -> std::alloc::Layout {
        unsafe {
            std::alloc::Layout::from_size_align(
                pxrInternal_v0_21__pxrReserved____GfMatrix3d_sizeof(),
                pxrInternal_v0_21__pxrReserved____GfMatrix3d_alignof(),
            ).unwrap()
        }
    }
}


impl pxrInternal_v0_21__pxrReserved____GfMatrix4f_t {
    pub fn layout() -> std::alloc::Layout {
        unsafe {
            std::alloc::Layout::from_size_align(
                pxrInternal_v0_21__pxrReserved____GfMatrix4f_sizeof(),
                pxrInternal_v0_21__pxrReserved____GfMatrix4f_alignof(),
            ).unwrap()
        }
    }
}


impl pxrInternal_v0_21__pxrReserved____GfMatrix4d_t {
    pub fn layout() -> std::alloc::Layout {
        unsafe {
            std::alloc::Layout::from_size_align(
                pxrInternal_v0_21__pxrReserved____GfMatrix4d_sizeof(),
                pxrInternal_v0_21__pxrReserved____GfMatrix4d_alignof(),
            ).unwrap()
        }
    }
}



extern "C" {

pub fn pxrInternal_v0_21__pxrReserved____GfMatrix2f_sizeof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfMatrix2f_alignof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfMatrix2d_sizeof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfMatrix2d_alignof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfMatrix3f_sizeof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfMatrix3f_alignof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfMatrix3d_sizeof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfMatrix3d_alignof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfMatrix4f_sizeof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfMatrix4f_alignof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfMatrix4d_sizeof() -> usize;

pub fn pxrInternal_v0_21__pxrReserved____GfMatrix4d_alignof() -> usize;


} // extern "C"
